@startuml todo-list-app

skinparam classAttributeIconSize 0

Project *-- "0..*" Task : contains
TodoList *-- "1..*" Project : contains


class Task {
    -id: int
    -title : string
    -description : string
    -date : string
    -priority : int
    __
    -incrementId()
    .. getter ..
    +getId()
    +getTitle()
    +getDescription()
    +getDate()
    +getPriority()
    .. setter ..
    -setTitle()
    -setDescription()
    -setDate()
    -setPriority()
}

class Project {
    -name : string
    -isDefault: bool
    -icon: string
    -tasks : Task[0..*]
    __
    -addTask()
    -deleteTask()
    .. getter ..
    +getName()
    +getIsDefault()
    +getIcon()
    +getTasks()
    +getTask()
    .. setter ..
    -setName()
    -setIsDefault()
    -setIcon()
    -setTasks()
}

class TodoList {
    -projects : Project[1..*]
    __
    -addProject()
    -deleteProject()
    .. getter ..
    +getProjects()
    +getProject()
    .. setter ..
    -setProjects()
}

@enduml